@@ -1,3 +1,6 @@
+* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> -6.2.3-0
+- Add v2 compliance_markup data
+
 * Tue Mar 19 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.2-0
 - Replace use of simplib's deprecated Puppet 3 validate_between
   with Simplib::Cron::* types.  This change allows more flexibility
